PROD-13103 - Fixed list-grid view icon overlapping

--- a/assets/css/sass/r17/_discover-contrib-series.scss
+++ b/assets/css/sass/r17/_discover-contrib-series.scss
@@ -741,6 +741,7 @@ section.mb-xl {
     .results-icons .icons {
       width: 78px !important;
       float: left;
+      top: 4px;
     }
 
     .row .col-lg-3 div.results-num {
@@ -754,6 +755,7 @@ section.mb-xl {
     .results-icons .icons a#grid-view {
       float: left;
       margin-right: 14px;
+      width: 30px;
     }
 
     .results-icons .icons a#list-view {
